--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   text-align: center;
   height: 100%;
   width: 100%;
@@ -49,11 +48,15 @@ body {
   width: 400px;
   align-items: flex-start;
   flex-wrap: wrap;
+  padding: 4px;
+  background-color: rgb(6, 27, 49);
 }
 
 .box {
   border: 1px solid rgb(6, 27, 49);
+  background-color: white;
   flex-grow: 1;
   align-self: stretch;
-  flex-basis: calc((100% / 3) - 10px);
+  box-sizing: border-box;
+  flex-basis: calc(100% / 2);
 }
